<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/add"
        android:icon="@drawable/ic_plus"
        app:showAsAction="always"
        android:id="@+id/action_add" />
    <item
        android:id="@+id/action_sort_none"
        android:title="@string/sort_none" />
    <item
        android:title="@string/most_time_left"

        android:id="@+id/action_show_descending_date" />
    <item android:title="@string/least_time_left"

        android:id="@+id/action_sort_assending_date" />
    <item android:title="@string/completed"
        android:id="@+id/action_show_complete" />
    <item android:title="@string/incomplete"
        android:id="@+id/action_show_incomplete" />
</menu>