<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dialog"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
       >



        <TextView
            android:id="@+id/tv_add_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_add_drop"
            android:layout_marginTop="@dimen/tv_title_top_margin"
            android:layout_marginBottom="@dimen/tv_title_bottom_margin"
            android:textSize="@dimen/tv_text_size"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="@dimen/iv_add_dialog_width"
            android:layout_height="@dimen/iv_add_dialog_heigth"
            android:src="@drawable/ic_close"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/tv_add_it"
            android:layout_alignBottom="@+id/tv_add_it"
            tools:ignore="ContentDescription"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_drop"
            android:background="@drawable/bg_et_drop"
            android:layout_below="@+id/tv_add_it"
            android:hint="@string/what_is_it"
            android:padding="@dimen/et_drop_padding"
            android:inputType="textVisiblePassword"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_add_it"
            android:id="@+id/btn_add_a_drop"
            android:textAllCaps="false"
            android:layout_marginBottom="27dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_btn_add_it" />

        <sk.greate43.bucketdrops.widgets.BucketPickerView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/datePicker"
            android:layout_below="@+id/et_drop"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="27dp" />


    </RelativeLayout>

</ScrollView>
